--- a/demotypewriterview/src/main/res/layout/fragment_demo.xml
+++ b/demotypewriterview/src/main/res/layout/fragment_demo.xml
@@ -5,7 +5,6 @@
     android:orientation="vertical">
 
     <in.codeshuffle.typewriterview.TypeWriterView
-        android:id="@+id/typeWriterView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -14,7 +13,13 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
+        <LinearLayout
+            android:id="@+id/controlPanel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
